--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 buildscript {
     ext {
-        springBootVersion = '1.3.5.RELEASE'
+        springBootVersion = "$springBootVersion"
     }
     repositories {
         mavenCentral()
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+        classpath "io.spring.gradle:dependency-management-plugin:$dependencyManagementVersion"
     }
 
 }
@@ -18,6 +19,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'spring-boot'
+apply plugin: 'io.spring.dependency-management'
 
 
 jar {
@@ -51,6 +53,6 @@ dependencies {
 }
 
 wrapper {
-    gradleVersion '2.12'
+    gradleVersion "$gradleWrapperVersion"
 }
 
