--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-
 # versions
 springBootVersion=1.3.5.RELEASE
-
 lombokVersion=1.16.8
 liquibaseVersion=3.5.0
+dependencyManagementVersion=0.6.0.RELEASE
+gradleWrapperVersion=3.5
